# Looptimal

./: .gitattributes  .gitignore  .skillspector-baseline.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  SKILL.md  pyproject.toml  release-boundary.md
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
assets/: logo.txt
examples/campaign-staged-remediation/: README.md  plan.md
examples/ci-triage/: README.md
examples/critic-panel/: README.md  critic-1.sh  critic-2.sh  critic-3.sh  rubric.md  run_demo.sh  verify.sh
examples/dagger-isolation/: README.md
examples/hybrid/: README.md  loop-spec.yaml  state.md  verify.sh
examples/issue-to-pr-bugfix/: README.md  evidence-bundle.json  mission.yaml  outcome-verdict.json  simulation.md
examples/perf-optimization/: README.md  loop-spec.yaml  state.md  verify.sh
examples/ratchet-debt/: README.md  findings.txt  loop-spec.yaml  maker.sh  ratchet-advance.sh  (+3 more)
hooks/: pre-push
looptimal_cli/: __init__.py
personas/: architect.md  backend-api.md  critic.md  data.md  forecaster.md  frontend.md  infra.md  performance.md  planner.md  red-team.md  security.md  verifier.md
profiles/: codex.example.yaml  grok-build.example.yaml  looptimal.example.yaml  oh-my-claudecode.example.yaml  openclaw.example.yaml  opencode.example.yaml
references/: agent-foundry.md  campaign.md  decision-gate.md  evidence-bundle.md  oracle-library.md  pipeline.md  profiles.md  roles.md  rot-radar.md  schema.md  simulate.md  troubleshooting.md  verifiers.md
scripts/: _common.py  check-no-network-imports.py  check-version-consistency.py  install-windows.ps1  loopprint-detect.py  loopprint-doctor.py  loopprint-lint.py  loopprint-ls.py  loopprint-report.py  loopprint-skillify.py  looptimal-detect.py  looptimal-docs-check.py  looptimal-doctor.py  looptimal-frame-ingest.py  looptimal-lint.py  verify-outcome.py
templates/: agent-persona.md  campaign-spec.yaml  contract.yaml  evidence-bundle.json  flow.mmd  loop-spec.yaml  maker.sh  mission.yaml  oracle.yaml  run-this-loop.sh  simulation.md  tool_trajectory_check.py  verifier-library.yaml
tests/: test_critic_panel_demo.py  test_detect.py  test_docs_check.py  test_doctor.py  test_frame_ingest.py  test_judge_calibration.py  test_lint.py  test_lint_critic_panel.py  test_lint_loop_dir.py  test_lint_shape.py  test_looptimal_lint.py  test_ls.py  test_runner_ratchet.py  test_tool_trajectory_check.py  test_verify_outcome_receipt.py
(+24 files in other folders)
